# Hunyuan3D-2.1

./: main.py  pyproject.toml
hy3dpaint/custom_rasterizer/: pyproject.toml
hy3dpaint/custom_rasterizer/lib/custom_rasterizer_kernel/: grid_neighbor.cpp  rasterizer.cpp  rasterizer_gpu.cu
