[project]
name = "hunyuan3d-2-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
	"accelerate==1.1.1",
	"basicsr==1.4.2",
	"bpy==4.0",
	"configargparse==1.7",
	"cupy-cuda12x==13.4.1",
	"diffusers==0.30.0",
	"einops==0.8.0",
	"fastapi==0.115.12",
	"gradio==5.33.0",
	"huggingface-hub==0.30.2",
	"imageio==2.36.0",
	"ninja==1.11.1.1",
	"numpy==1.24.4",
	"omegaconf==2.3.0",
	"onnxruntime==1.16.3",
	"open3d==0.18.0",
	"opencv-python==4.10.0.84",
	"pandas==2.2.2",
	"psutil==6.0.0",
	"pybind11==2.13.4",
	"pydantic==2.10.6",
	"pygltflib==1.16.3",
	"pymeshlab==2022.2.post3",
	"pythreejs",
	"pytorch-lightning==1.9.5",
	"pyyaml==6.0.2",
	"realesrgan==0.3.0",
	"rembg==2.0.65",
	"safetensors==0.4.4",
	"scikit-image==0.24.0",
	"scipy==1.14.1",
	"tb-nightly==2.18.0a20240726",
	"timm",
	"torch==2.6.0",
	"torchaudio==2.6.0",
	"torchdiffeq",
	"torchmetrics==1.6.0",
	"torchvision==0.21.0",
	"tqdm==4.66.5",
	"transformers==4.46.0",
	"trimesh==4.4.7",
	"uvicorn==0.34.3",
	"xatlas==0.0.9",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124" },
]
torchvision = [
  { index = "pytorch-cu124" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
